# airweave

./: .codespellrc  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  auth0-integration.md  billing-period-refactoring-design.md  ci_run_single.py  docker-compose.dev.yml  docker-compose.yml  monke.sh  new-source-connection-ux.md  package-lock.json  package.json  pyproject.toml  start.sh  startup.sh  user-org-design-doc.md
.cursor/mcp/sync_test/: Dockerfile  LICENSE  README.md  pyproject.toml  server.py
backend/: .coverage  .coveragerc  Dockerfile  Dockerfile.dev  alembic.ini  conftest.py  entrypoint.dev.sh  entrypoint.sh  local.py  main.py  pyproject.toml  pytest.ini  test.txt
backend/airweave/: __init__.py  example_endpoint_patterns.py  main.py
backend/airweave/analytics/: README.md  __init__.py  search_analytics.py  service.py
backend/airweave/api/: auth.py  context.py  deps.py  examples.py  middleware.py  router.py
backend/airweave/billing/: README.md  __init__.py  plan_logic.py  service.py  test_stripe_billing_e2e.py  transactions.py  webhook_handler.py
backend/airweave/core/: __init__.py  auth0_service.py  auth_provider_service.py  billing_service.py  chat_service.py  collection_service.py  config.py  connection_service.py  credential_sanitizer.py  credentials.py  dag_service.py  datetime_utils.py  email_service.py  exceptions.py  guard_rail_service.py  logging.py  organization_serivce.py  organization_service.py  pg_field_catalog_service.py  pubsub.py  query_preprocessor.py  redis_client.py  search_service.py  secrets.py  shared_models.py  source_connection_service.py  source_connection_service_helpers.py  stripe_webhook_handler.py  sync_cursor_service.py  sync_job_service.py  sync_service.py  temporal_service.py  webhook_handler.py
backend/airweave/crud/: __init__.py  _base.py  _base_organization.py  _base_public.py  _base_soft_delete.py  _base_system.py  _base_user.py  crud_api_key.py  crud_auth_provider.py  crud_billing_period.py  crud_chat.py  crud_collection.py  crud_connection.py  crud_connection_init_session.py  crud_dag.py  crud_destination.py  crud_embedding_model.py  crud_entity.py  crud_entity_count.py  crud_entity_definition.py  crud_entity_relation.py  crud_integration_credential.py  crud_organization.py  crud_organization_billing.py  crud_redirect_session.py  crud_search_query.py  crud_source.py  crud_source_connection.py  crud_sync.py  crud_sync_cursor.py  crud_sync_job.py  crud_transformer.py  crud_usage.py  crud_user.py  crud_white_label.py
backend/airweave/db/: init_db.py  init_db_native.py  session.py  unit_of_work.py
backend/airweave/graph_db/: neo4j_service.py
backend/airweave/integrations/: auth0_management.py  stripe_client.py
backend/airweave/mappers/: source_connection.py
backend/airweave/models/: __init__.py  _base.py  api_key.py  auth_provider.py  billing_event.py  billing_period.py  chat.py  collection.py  connection.py  connection_init_session.py  dag.py  destination.py  embedding_model.py  entity.py  entity_count.py  entity_definition.py  entity_relation.py  integration_credential.py  organization.py  organization_billing.py  pg_field_catalog.py  redirect_session.py  search_query.py  source.py  source_connection.py  sync.py  sync_connection.py  sync_cursor.py  sync_job.py  transformer.py  usage.py  user.py  user_organization.py  white_label.py
backend/airweave/platform/: __init__.py  db_sync.py  decorators.py  locator.py  scheduler.py
backend/airweave/schemas/: __init__.py  api_key.py  auth.py  auth_provider.py  billing_event.py  billing_period.py  collection.py  connection.py  dag.py  destination.py  embedding_model.py  entity.py  entity_count.py  entity_definition.py  entity_relation.py  integration_credential.py  invitation.py  organization.py  organization_billing.py  search.py  search_query.py  source.py  source_connection.py  sync.py  sync_cursor.py  sync_job.py  sync_pubsub.py  usage.py  usage_dashboard.py  user.py  white_label.py
backend/airweave/search/: __init__.py  config_builder.py  decay.py  executor.py  search_service.py  search_service_v2.py  utils.py
backend/airweave/vector_db/: weaviate_service.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 00cb22315e1b_add_cascade_deletes_to_dag_node_.py  01538fc19202_convert_datetime_columns_to_timezone_.py  058889b56728_add_cascading_delete_events_for_.py  0765a96ad189_merge_heads_for_pg_field_catalog.py  09b554b1809c_make_source_config_class_required.py  0c14b62dd6c2_add_module_name_to_transformer.py  0cf098b4c987_rename_chunk_to_entity.py  0ebb599fc7fd_add_new_models.py  1172abde1641_add_cascade_delete_to_dag_node.py  153d267e9152_add_connection_model.py  16b5ba5572fb_dummy_migration.py  1ab50fcb59fb_add_labels.py  1d71c1892c63_remove_config_fields_from_connection_.py  1de8ee6ba9e0_add_cascade_relationships_to_connection_.py  1e286802b4d3_update_sync_job_entity_counters.py  1ebb07e18a07_make_sync_point_at_connection_ids.py  1fb5731c172e_make_white_label_point_at_source_.py  210e475985ae_add_source_connection_table.py  2181e5765751_add_foreign_key_to_readable_auth_.py  22fcfb994985_optional_config_class_in_source.py  25e5ed7e5b9f_add_scheduled_field_to_sync_job_table.py  264fdc0ac89c_merge_heads_97b3317e4b70_and_.py  288623eaf91f_add_description_and_config_to_connection.py  289ab00f27ef_merge_heads_for_connection_init_session_.py  2a6c65061d05_add_next_scheduled_run_to_sync.py  2d0c02a35fdb_make_allowed_origins_not_nullable.py  2e5082e44f34_add_entities_encountered_to_syncjob.py  2f1e0b5013e8_redirect_table_for_proxy_auth_urls.py  34b7f4f4ac81_restructure_user_orgs.py  3a3c65856c56_rename_entity_definition_id_field_in_.py  3ae49633da31_fix_syncjobstatus_enum_case_consistency.py  3c0d6c431e21_add_usage_table_for_organization_.py  3d49312c98fd_add_trialing_to_billing_status_enum.py  (+97 more)
backend/app/: main.py
backend/output/: drive_file_types.json
backend/scripts/: manual_stripe_pro_flow.py
backend/tests/: README.md  __init__.py  conftest.py
(+1147 files in other folders)
