[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-sync-test"
version = "0.1.0"
description = "MCP server for testing Airweave source integrations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Airweave Team" },
]
dependencies = [
    "fastapi>=0.95.0",
    "httpx>=0.24.0",
    "mcp>=0.1.0",
    "uvicorn>=0.21.1",
]

[project.scripts]
mcp-server-sync-test = "mcp_server_sync_test:main"

[project.optional-dependencies]
dev = [
    "black>=23.1.0",
    "isort>=5.12.0",
    "mypy>=1.1.1",
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 